--- a/web/index.html
+++ b/web/index.html
@@ -10,9 +10,6 @@
 
     For more details:
     * https://developer.mozilla.org/en-US/docs/Web/HTML/Element/base
-
-    This is a placeholder for base href that will be replaced by the value of
-    the `--base-href` argument provided to `flutter build`.
   -->
   <base href="$FLUTTER_BASE_HREF">
 
@@ -20,8 +17,11 @@
   <meta content="IE=Edge" http-equiv="X-UA-Compatible">
   <meta name="description" content="A new Flutter project.">
 
+  <!-- ✅ Google Sign-In Client ID for Web -->
+  <meta name="google-signin-client_id" content="1034077794363-nbjfc8s0bdhjbko5rirlv2osrjmekhls.apps.googleusercontent.com" />
+
   <!-- iOS meta tags & icons -->
-  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-capable" content="yes">
   <meta name="apple-mobile-web-app-status-bar-style" content="black">
   <meta name="apple-mobile-web-app-title" content="smart_app">
   <link rel="apple-touch-icon" href="icons/Icon-192.png">
